--- a/src/assets/stylesheets/App.scss
+++ b/src/assets/stylesheets/App.scss
@@ -30,6 +30,14 @@
   font-family: Chivo;
 }
 
+.labels {
+  margin-top: 1rem;
+}
+
+.input-fields {
+  width: 100%;
+}
+
 .regular {
   font-weight: 100;
 }
